--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/patient?serverTimezone=Europe/Moscow
+spring.datasource.username=postgres
+spring.datasource.password=12345
 
+mybatis.mapper-locations=classpath:mapper/*.xml
