--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=postgres
 spring.datasource.password=12345
 
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+server.port=8081
